Enhance PracticeControllerTest with comprehensive repository cleanup and updated assertions